tests/auto/corelib/tools/qbytedatabuffer/qbytedatabuffer.pro
@@ -1,0 +1,4 @@
+TARGET = tst_qbytedatabuffer
+CONFIG += testcase
+QT += core-private testlib
+SOURCES += tst_qbytedatabuffer.cpp
