tests/benchmarks/network/access/access.pro
@@ -2,4 +2,5 @@ TEMPLATE = subdirs
 SUBDIRS = \
         qfile_vs_qnetworkaccessmanager \
         qnetworkreply \
+        qnetworkreply_from_cache \
         qnetworkdiskcache
