tests/benchmarks/network/access/qnetworkreply_from_cache/qnetworkreply_from_cache.pro
@@ -1,0 +1,4 @@
+TARGET = tst_bench_qnetworkreply_from_cache
+CONFIG += testcase
+QT += network testlib
+SOURCES += tst_qnetworkreply_from_cache.cpp
